Fixed utilities display on narrow screens

--- a/ajaxTable.less
+++ b/ajaxTable.less
@@ -106,12 +106,14 @@
         -o-display: flex;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         
         //PAGINATION
         .ajax-table-pagination,.ajax-table-buttons{
             display: inline-block;
             min-width: -moz-fit-content;
             min-width: fit-content;
+            margin: 5px;
 
             ul{
                 list-style-type: none;
